--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
   "scripts": {
     "prepare": "ncc build index.js -o dist --source-map --license licenses.txt"
   },
+  "dependencies": {
+    "@actions/core": "^1.10.0"
+  },
   "devDependencies": {
-    "@actions/core": "^1.10.0",
     "@vercel/ncc": "^0.34.0"
   }
 }
